@@ -5,6 +5,8 @@ TODO:
 
 2017.8.10	K.L.	<k.l.lambda@gmail.com>
 
+	+	HandControllerEditor.cs: display gears.
+
 	+	HandController.cs: Gear implemented.
 
 	+	HandControllerEditor.cs: created.
